--- a/Krypta/templates/Krypta/base.html
+++ b/Krypta/templates/Krypta/base.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="{% static 'css/index.css' %}">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@200;300&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300&display=swap" rel="stylesheet">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -17,16 +17,16 @@
     <nav class="site-header sticky-top py-1">
         <div class="container d-flex flex-column flex-md-row justify-content-between">
           <a class="py-2" href="{% url 'index' %}">
-            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="d-block mx-auto"><circle cx="12" cy="12" r="10"></circle><line x1="14.31" y1="8" x2="20.05" y2="17.94"></line><line x1="9.69" y1="8" x2="21.17" y2="8"></line><line x1="7.38" y1="12" x2="13.12" y2="2.06"></line><line x1="9.69" y1="16" x2="3.95" y2="6.06"></line><line x1="14.31" y1="16" x2="2.83" y2="16"></line><line x1="16.62" y1="12" x2="10.88" y2="21.94"></line></svg>
+            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="d-block mx-auto"><circle cx="12" cy="12" r="10"></circle></svg>
           </a>
           <a class="py-2 d-none d-md-inline-block" href="{% url 'index' %}">Strona główna</a>
           <a class="py-2 d-none d-md-inline-block" href="{% url 'aktualnosci' %}">Aktualności</a>
           <a class="py-2 d-none d-md-inline-block" href="{% url 'kursy' %}">Kursy kryptowalut</a>
           {% if user.is_authenticated %}
           <a class="py-2 d-none d-md-inline-block" style="font-weight:bold;" href="{% url 'profil' %}">{{ request.user }}</a>
-          <a class="py-2 d-none d-md-inline-block" style="font-weight:bold;" href="{% url 'wyloguj'%}">Wyloguj</a>
+          <button class="btn btn-outline-secondary" style="font-weight:bold;" onclick="location.href='{% url 'wyloguj'%}'">Wyloguj</button>
           {%else%}
-          <a class="py-2 d-none d-md-inline-block" style="font-weight:bold;" href="{% url 'login' %}">Zaloguj</a>
+          <button class="btn btn-outline-primary" style="font-weight:bold;" onclick="location.href='{% url 'login'%}'">Logowanie</button>
           {%endif%}
         </div>
   </nav>
