--- a/Krypta/templates/Krypta/wpis_detail.html
+++ b/Krypta/templates/Krypta/wpis_detail.html
@@ -2,6 +2,7 @@
 {%load static%}
 {%block content%}
 <div class="text-center">
+        <p><a href="{% url 'edycja_wpisu' pk=object.id %}">EDYTUJ</a></p>
         <img src="{{object.obraz.url}}" alt="Obraz z wpisu" style="width: 50%; padding: 25px;">
         <h1>{{object.tytul}}</h1>
         <p style="color: gray;">Opublikowano: {{object.data_utworzenia}}</p>
