--- a/Krypta/templates/Krypta/base.html
+++ b/Krypta/templates/Krypta/base.html
@@ -33,15 +33,17 @@
     <div class="container">
         {%block content%}
         {%endblock%}      
-
+    </div>
+    <div class="container">
 <div class="row">
 <footer class="">
     <div class="text-center p-4" style="background-color: rgba(0, 0, 0, 0.05);">
       Adam Styrkosz | 2021 | adamsty484@student.polsl.pl
     </div>
-
 </footer>
 </div>
     </div>
+
+
 </body>
 </html>
