--- a/Krypta/templates/Krypta/wpis_list.html
+++ b/Krypta/templates/Krypta/wpis_list.html
@@ -1,15 +1,20 @@
 {% extends "Krypta/base.html" %}
 {%load static%}
 {%block content%}
-<div class="row">
+<div class="content text-center row">
 {%for item in object_list%}
-        <div class="text-center">
-            <a href="{%url 'wpis' pk=item.id%}">
-                <img src="{{ item.obraz.url }}" alt="BRAK OBRAZU" class="imgact">
-                <h2>{{item.tytul}}</h2>
-                <h5>{{item.data_utworzenia}}</h5>
-            </a>
-        </div>
+    <div class="card flex-md-row mb-4 box-shadow h-md-250">
+            <div class="card-body d-flex flex-column align-items-start wpis">
+              <h3 class="mb-0">
+                   <a href="{% url 'wpis' pk=item.id %}">
+                {{ item.tytul}}
+                   </a>
+              </h3>
+              <p class="card-text mb-auto" style="text-align: left;">{{ item.opis }}</p>
+              <div class="mb-1 text-muted">{{ item.data_utworzenia}}</div>
+            </div>
+            <img class="card-img-right flex-auto d-none d-md-block" data-src="holder.js/200x250?theme=thumb" alt="Thumbnail [200x250]" style="width: 250px; height: 125px; margin: 1vh; border-radius: 3px" src="{{item.obraz.url}}" data-holder-rendered="true">
+    </div>
 {%endfor%}
 </div>
 
