Dodano nowy profil uzytkownika wraz z edycja, dodano nowe okno rejestracji uzytkownika, poprawiono wyswietlanie kursów oraz skrypt generujący tabelę, zabezpieczono edycja dla innych uzytkownikow, poprawiono stylowanie stron, korekcja bledow w widokach

--- a/Krypta/static/css/index.css
+++ b/Krypta/static/css/index.css
@@ -2,7 +2,15 @@ body{
   font-family: 'Inter', sans-serif;
   background-color: #fafcfe
 }
-
+table tbody {
+    display: table;
+    width: 100%;
+}
+table {
+    display: block;
+    overflow-x: auto;
+    white-space: nowrap;
+}
 .container {
     max-width: 1000px;
   }
@@ -59,10 +67,6 @@ body{
     text-decoration: none;
   }
 
-  .zawartosc{
-    text-align: center;
-  }
-
   .logo{
     display: inline-block;
     height: 50px;
@@ -80,6 +84,11 @@ body{
       max-width: 70%;
     }
     }
+
+  .rejestracja li, span{
+    font-size: 12px;
+    color: rgb(119, 119, 119);
+  }
 
 
 
