--- a/Krypta/templates/Krypta/user_detail.html
+++ b/Krypta/templates/Krypta/user_detail.html
@@ -1,7 +1,63 @@
 {% extends "Krypta/base.html" %}
 
 {%block content%}
-<h1>Zalogowano jako: {{ user.username }}</h1>
-<h1>Adres email: {{ user.email }}</h1>
-<h1>Imię i nazwisko: {{ user.get_full_name }}</h1>
+<div class="row">
+
+
+<table class="table">
+<tr>
+    <td>
+        Nazwa użytkownika
+    </td>
+    <td>
+        {{ user.username }}
+    </td>
+</tr>
+<tr>
+    <td>
+        Imię
+    </td>
+    <td>
+        {{ user.first_name }}
+    </td>
+</tr>
+<tr>
+    <td>
+        Nazwisko
+    </td>
+    <td>
+        {{ user.last_name }}
+    </td>
+</tr>
+<tr>
+    <td>
+        Adres email
+    </td>
+    <td>
+        {{ user.email }}
+    </td>
+</tr>
+<tr>
+    <td>
+        Data utworzenia konta
+    </td>
+    <td>
+        {{ user.date_joined }}
+    </td>
+</tr>
+<tr>
+    <td>
+        Ostatnie logowanie
+    </td>
+    <td>
+        {{ user.last_login }}
+    </td>
+</tr>
+</table>
+</div>
+    <div class="row">
+    <button class="btn btn-outline-secondary" onclick="location.href='{% url 'edycja_profilu' pk=user.id %}'" style="width: 15%;margin: 1rem">
+    Edytuj dane
+    </button>
+    </div>
 {% endblock %}
