--- a/Krypta/templates/Krypta/edycja_wpisu.html
+++ b/Krypta/templates/Krypta/edycja_wpisu.html
@@ -1,5 +1,16 @@
-<form method="post">
-{% csrf_token %}
-{{ form.as_p }}
-<input type="submit" value="ZAPISZ!">
-</form>
+{% extends "Krypta/base.html" %}
+{%load static%}
+{%block content%}
+<div class="text-center">
+        <form method="post">
+        {% csrf_token %}
+            <table class="table">
+                {{ form.as_table}}
+                <tr><td><button type="submit" class="btn btn-outline-primary">ZAPISZ</button></td></tr>
+                </table>
+            </form>
+</div>
+{%endblock%}
+
+
+
