--- a/Krypta/templates/Krypta/kursy.html
+++ b/Krypta/templates/Krypta/kursy.html
@@ -6,9 +6,8 @@
           <div class="col-md-auto"><h2>Kursy kryptowalut</h2></div>
           <div class="col" style="display: flex;align-items: center;justify-content: right;"><button class="btn btn-outline-secondary" onclick="renderTableFromAPI('{% url 'cryptoallapi' %}')">Odśwież</button></div>
   </div>
-  <table class="table table-striped" id="tabela_krypto">
+  <table class="table table-striped" id="tabela_krypto"></table>
     <script>
         renderTableFromAPI('{% url 'cryptoallapi' %}')
     </script>
-  </table>
 {% endblock %}
