--- a/Krypta/templates/Krypta/register.html
+++ b/Krypta/templates/Krypta/register.html
@@ -2,10 +2,12 @@
 
 {%block content%}
 <h1>Rejestracja</h1>
-<form method="post">
+<form method="post" class="rejestracja">
     {% csrf_token %}
-    {{ form.as_p }}
-    <input type="submit" value="Zarejestruj">
+    <table class="table">
+    {{ form.as_table }}
+    </table>
+    <input type="submit"  class="btn btn-outline-primary" value="Zarejestruj">
 </form>
 {% endblock %}
 
