--- a/Krypta/templates/Krypta/wpis_list.html
+++ b/Krypta/templates/Krypta/wpis_list.html
@@ -1,7 +1,7 @@
 {% extends "Krypta/base.html" %}
 {%load static%}
 {%block content%}
-<div class="content text-center row">
+<div class="content text-center row"  style="margin: 1em">
 {%for item in object_list%}
     <div class="card flex-md-row mb-4 box-shadow h-md-250">
             <div class="card-body d-flex flex-column align-items-start wpis">
