--- a/Krypta/templates/Krypta/brak_danych.html
+++ b/Krypta/templates/Krypta/brak_danych.html
@@ -1,7 +1,5 @@
-{% extends 'Krypta/base.html' %}
-
-{% block content %}
-    <h1> Brak danych dotyczących wybranej kryptowaluty :(</h1>
-    <h2> Informacje powinny pojawić się w niedalekiej przyszłości</h2>
+{% extends 'Krypta/base.html' %} {% block content %}
+<h1>Brak danych dotyczących wybranej kryptowaluty :(</h1>
+<h2>Informacje powinny pojawić się w niedalekiej przyszłości</h2>
 
 {% endblock %}
