--- a/Krypta/templates/Krypta/edycja_uzytkownika.html
+++ b/Krypta/templates/Krypta/edycja_uzytkownika.html
@@ -1,10 +1,9 @@
-{% extends 'Krypta/base.html' %}
-{% block content %}
+{% extends 'Krypta/base.html' %} {% block content %}
 <form method="post">
-    {% csrf_token %}
-    <table class="table">
+  {% csrf_token %}
+  <table class="table">
     {{ form.as_table }}
-        </table>
-    <input type="submit" class="btn btn-outline-primary" value="Zapisz zmiany">
+  </table>
+  <input type="submit" class="btn btn-outline-primary" value="Zapisz zmiany" />
 </form>
 {% endblock %}
