--- a/Krypta/templates/Krypta/base.html
+++ b/Krypta/templates/Krypta/base.html
@@ -1,51 +1,93 @@
 {%load static%}
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
-    <link rel="stylesheet" href="{% static 'css/bootstrap.css' %}">
-    <link rel="stylesheet" href="{% static 'css/index.css' %}">
-    <link rel="icon" href="https://cdn.iconscout.com/icon/premium/png-256-thumb/cryptocurrency-2627304-2174937.png">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300&display=swap" rel="stylesheet">
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}" />
+    <link rel="stylesheet" href="{% static 'css/bootstrap.css' %}" />
+    <link rel="stylesheet" href="{% static 'css/index.css' %}" />
+    <link
+      rel="icon"
+      href="https://cdn.iconscout.com/icon/premium/png-256-thumb/cryptocurrency-2627304-2174937.png"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@300&display=swap"
+      rel="stylesheet"
+    />
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Krypta</title>
     <script src="{% static 'js/crypto.js' %}"></script>
-</head>
-<body>
+  </head>
+  <body>
     <nav class="site-header sticky-top py-1">
-        <div class="container d-flex flex-column flex-md-row justify-content-between">
-          <a class="py-2" href="{% url 'index' %}">
-            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="d-block mx-auto"><circle cx="12" cy="12" r="10"></circle></svg>
-          </a>
-          <a class="py-2 d-none d-md-inline-block" href="{% url 'index' %}">Strona główna</a>
-          <a class="py-2 d-none d-md-inline-block" href="{% url 'aktualnosci' %}">Aktualności</a>
-          <a class="py-2 d-none d-md-inline-block" href="{% url 'kursy' %}">Kursy kryptowalut</a>
-          {% if user.is_authenticated %}
-          <a class="py-2 d-none d-md-inline-block" style="font-weight:bold;" href="{% url 'profil' %}">{{ request.user }}</a>
-          <button class="btn btn-outline-secondary" style="font-weight:bold;" onclick="location.href='{% url 'wyloguj'%}'">WYLOGUJ</button>
-          {%else%}
-          <button class="btn btn-outline-primary" style="font-weight:bold;" onclick="location.href='{% url 'login'%}'">LOGOWANIE</button>
-          {%endif%}
-        </div>
-  </nav>
+      <div
+        class="container d-flex flex-column flex-md-row justify-content-between"
+      >
+        <a class="py-2" href="{% url 'index' %}">
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            width="24"
+            height="24"
+            viewBox="0 0 24 24"
+            fill="none"
+            stroke="currentColor"
+            stroke-width="2"
+            stroke-linecap="round"
+            stroke-linejoin="round"
+            class="d-block mx-auto"
+          >
+            <circle cx="12" cy="12" r="10"></circle>
+          </svg>
+        </a>
+        <a class="py-2 d-none d-md-inline-block" href="{% url 'index' %}"
+          >Strona główna</a
+        >
+        <a class="py-2 d-none d-md-inline-block" href="{% url 'aktualnosci' %}"
+          >Aktualności</a
+        >
+        <a class="py-2 d-none d-md-inline-block" href="{% url 'kursy' %}"
+          >Kursy kryptowalut</a
+        >
+        {% if user.is_authenticated %}
+        <a
+          class="py-2 d-none d-md-inline-block"
+          style="font-weight: bold"
+          href="{% url 'profil' %}"
+          >{{ request.user }}</a
+        >
+        <button
+          class="btn btn-outline-secondary"
+          style="font-weight: bold"
+          onclick="location.href='{% url 'wyloguj'%}'"
+        >
+          WYLOGUJ
+        </button>
+        {%else%}
+        <button
+          class="btn btn-outline-primary"
+          style="font-weight: bold"
+          onclick="location.href='{% url 'login'%}'"
+        >
+          LOGOWANIE
+        </button>
+        {%endif%}
+      </div>
+    </nav>
+    <div class="container">{%block content%} {%endblock%}</div>
     <div class="container">
-        {%block content%}
-        {%endblock%}      
+      <div class="row">
+        <footer class="">
+          <div
+            class="text-center p-4"
+            style="background-color: rgba(0, 0, 0, 0.05)"
+          >
+            Adam Styrkosz | 2021 | adamsty484@student.polsl.pl
+          </div>
+        </footer>
+      </div>
     </div>
-    <div class="container">
-<div class="row">
-<footer class="">
-    <div class="text-center p-4" style="background-color: rgba(0, 0, 0, 0.05);">
-      Adam Styrkosz | 2021 | adamsty484@student.polsl.pl
-    </div>
-</footer>
-</div>
-    </div>
-
-
-</body>
+  </body>
 </html>
