--- a/Krypta/templates/Krypta/edycja_wpisu.html
+++ b/Krypta/templates/Krypta/edycja_wpisu.html
@@ -1,16 +1,15 @@
-{% extends "Krypta/base.html" %}
-{%load static%}
-{%block content%}
+{% extends "Krypta/base.html" %} {%load static%} {%block content%}
 <div class="text-center">
-        <form method="post">
-        {% csrf_token %}
-            <table class="table">
-                {{ form.as_table}}
-                <tr><td><button type="submit" class="btn btn-outline-primary">ZAPISZ</button></td></tr>
-                </table>
-            </form>
+  <form method="post">
+    {% csrf_token %}
+    <table class="table">
+      {{ form.as_table}}
+      <tr>
+        <td>
+          <button type="submit" class="btn btn-outline-primary">ZAPISZ</button>
+        </td>
+      </tr>
+    </table>
+  </form>
 </div>
 {%endblock%}
-
-
-
