--- a/Krypta/templates/Krypta/dashboard.html
+++ b/Krypta/templates/Krypta/dashboard.html
@@ -1,4 +1,4 @@
-{%load static%}
+{%load static%} {% load humanize %}
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -22,12 +22,12 @@
   </head>
   <body>
     <nav class="navbar navbar-dark sticky-top bg-dark flex-md-nowrap p-0">
-      <a class="navbar-brand col-sm-3 col-md-2 mr-0" href="#"
-        >Krypta dashboard</a
+      <a class="navbar-brand col-sm-3 col-md-2 mr-0" href="#">
+        Zalogowany jako: {{user}}</a
       >
       <ul class="navbar-nav px-3">
         <li class="nav-item text-nowrap">
-          <a class="nav-link" href="#">Wyloguj</a>
+          <a class="nav-link" href="{% url 'index'%}">Powrót</a>
         </li>
       </ul>
     </nav>
@@ -171,6 +171,30 @@
           </div>
         </nav>
       </div>
+    </div>
+    <div class="container" style="margin-left: 20%">
+      <h1>Stan konta: {{balance|floatformat:2|intcomma}}$</h1>
+      <h2>Całkowity zysk/strata: {{value_diff|floatformat:2|intcomma}}$</h2>
+      <table class="table">
+        <tr>
+          <th>Waluta</th>
+          <th>Ilość</th>
+          <th>Cena zakupu</th>
+          <th>Data zakupu</th>
+          <th>Aktualna cena</th>
+          <th>Zysk / Strata</th>
+        </tr>
+        {%for crypto in cryptocurrencies%}
+        <tr>
+          <td>{{crypto.cryptocurrency_id}}</td>
+          <td>{{crypto.count|floatformat:5|intcomma }}</td>
+          <td>${{crypto.price|floatformat:2|intcomma }}</td>
+          <td>{{crypto.date_of_transaction}}</td>
+          <td>${{crypto.actual_price|floatformat:2|intcomma }}</td>
+          <td>${{crypto.price_diff|floatformat:2|intcomma }}</td>
+        </tr>
+        {%endfor%}
+      </table>
     </div>
   </body>
 </html>
