--- a/Krypta/templates/Krypta/dashboard.html
+++ b/Krypta/templates/Krypta/dashboard.html
@@ -192,6 +192,7 @@
           <th>Cena zakupu</th>
           <th>Aktualna cena</th>
           <th>Zysk / Strata ($)</th>
+          <th>Akcja</th>
         </tr>
         {%for crypto in cryptocurrencies%}
         <tr>
@@ -209,6 +210,42 @@
             {{crypto.price_diff|floatformat:2|intcomma }}
           </td>
           {%endif%}
+          <td>
+            <button
+              class="btn btn-outline-secondary"
+              onclick="deleteAtIndex({{crypto.id}})"
+            >
+              Usuń
+            </button>
+            <script>
+              function getCookie(name) {
+                let cookieValue = null;
+                if (document.cookie && document.cookie !== "") {
+                  const cookies = document.cookie.split(";");
+                  for (let i = 0; i < cookies.length; i++) {
+                    const cookie = cookies[i].trim();
+                    // Does this cookie string begin with the name we want?
+                    if (cookie.substring(0, name.length + 1) === name + "=") {
+                      cookieValue = decodeURIComponent(
+                        cookie.substring(name.length + 1)
+                      );
+                      break;
+                    }
+                  }
+                }
+                return cookieValue;
+              }
+              function deleteAtIndex(index) {
+                fetch(
+                  "http://127.0.0.1:8000/cryptocurrencyExchange/" + index + "/",
+                  {
+                    method: "DELETE",
+                    headers: { "X-CSRFToken": getCookie("csrftoken") },
+                  }
+                ).then((res) => location.reload());
+              }
+            </script>
+          </td>
         </tr>
         {%endfor%}
       </table>
