--- a/Krypta/templates/Krypta/base.html
+++ b/Krypta/templates/Krypta/base.html
@@ -81,7 +81,7 @@
     <div class="container">{%block content%} {%endblock%}</div>
     <div class="container">
       <div class="row">
-        <footer class="">
+        <footer style="margin-top:25px">
           <div
             class="text-center p-4"
             style="background-color: rgba(0, 0, 0, 0.05)"
