--- a/Krypta/templates/Krypta/crypto_detail.html
+++ b/Krypta/templates/Krypta/crypto_detail.html
@@ -1,12 +1,12 @@
 {% extends 'Krypta/base.html' %} {% load humanize %} {% block content %}
 
-<h1 style="margin-top: 20px">
-  <img src="{{apidata.image}}" alt="coin" style="width: 64px; height: 64px" />
-  {{ cryptocurrency.id }}
+<h1 style="margin-top: 20px; text-align: center;">
+  <img src="{{apidata.image}}" alt="coin" style="width: 64px; height: 64px;border-radius:15%" />
+  {{ cryptocurrency.name }}
 </h1>
 <h1>${{ apidata.price|floatformat:2|intcomma }}</h1>
-<h3>ATH ${{ apidata.high|floatformat:2|intcomma }}</h3>
-<h5>Do przebicia ATH pozostało ${{ apidata.delta|floatformat:2|intcomma }}</h5>
+<h4>Najwyższa cena w historii: ${{ apidata.high|floatformat:2|intcomma }}</h4>
+<h4>Do przebicia najwyższej ceny w historii pozostało ${{ apidata.delta|floatformat:2|intcomma }}</h4>
 <span style="font-size: 16px"> {{ cryptocurrency.description }}</span>
 <div class="row" style="margin-top: 10px">
   <div class="col-2">
@@ -21,6 +21,7 @@
     >
   </div>
 </div>
+    {% if wpisy %}
 <h2>Powiązane wpisy:</h2>
 <div class="row">
   {% for wpis in wpisy %}
@@ -33,4 +34,5 @@
   </div>
   {% endfor %}
 </div>
+    {% endif %}
 {% endblock %}
